minor fix for page alignment

--- a/styles/about.css
+++ b/styles/about.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: left;
   text-align: left;
-  height: auto;
+  height: 100vh;
   width: 60%;
   margin: 0 auto;
   flex-direction: column;
@@ -11,7 +11,7 @@
 
 .about-page h1 {
   font-size: 2rem;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   color: var(--white);
   text-align: center;
   margin-top: 50px;
